<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_search_black_24dp"
            android:fontFamily="@font/bree_serif"
            android:title="@string/trazi" />


        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_name_surname"
            android:fontFamily="@font/bree_serif"
            android:title="@string/profil"/>


        <item android:id="@+id/nav_my_ads"
            android:icon="@drawable/ic_my_ads"
            android:fontFamily="@font/bree_serif"
            android:title="@string/moji_oglasi"/>


        <item android:id="@+id/nav_ad_to_do"
            android:icon="@drawable/ic_work_black_24dp"
            android:fontFamily="@font/bree_serif"
            android:title="@string/za_odraditi"/>

        <item android:id="@+id/nav_ordered_ads"
            android:icon="@drawable/ic_timelapse_black_24dp"
            android:fontFamily="@font/bree_serif"
            android:title="@string/naruceno"/>

</menu>