<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108"
            app:srcCompat="@drawable/logo_transparent" />

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_email"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/bree_serif"
            android:textColor="#DCDCDC"
            android:textColorHint="#D3D3D3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.07999998" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/lozinka"
            android:inputType="textPassword"
            android:textColor="#DCDCDC"
            android:textColorHint="#D3D3D3"
            android:fontFamily="@font/bree_serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEmail"
            app:layout_constraintVertical_bias="0.073" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/secondary"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/prijava"
            android:fontFamily="@font/baloo"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPassword_txt"
            app:layout_constraintVertical_bias="0.31" />

        <TextView
            android:id="@+id/newUser_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/novi_korisnik"
            android:textColor="#d3d3d3"
            android:textSize="18sp"
            android:fontFamily="@font/bree_serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.386"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.237" />

        <ImageView
            android:id="@+id/goToRegisterBtn"
            android:contentDescription="@string/novi_korisnik"
            android:layout_width="60dp"
            android:layout_height="62dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toEndOf="@+id/newUser_txt"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.32"
            app:srcCompat="@drawable/ic_new_user" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            app:layout_constraintVertical_bias="0.26999998" />

        <TextView
            android:id="@+id/resetPassword_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zaboravljena_lozinka"
            android:textColor="#d3d3d3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/bree_serif"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.060000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
